# Sertor

./: .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEMOS.md  ESEMPI.md  README.md  Sertor.code-workspace  pyproject.toml  requirements.txt  wiki.config.toml
.claude/: settings.json
.claude/agents/: concierge.md  configuration-manager.md  requirements-analyst.md  speckit-analyze.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-taskstoissues.md  wiki-curator.md  wiki-keeper.md
.claude/commands/: derive-entity-types.md  wiki.md
.claude/hooks/: _hooklib.py  acta-session-start.py  memory-capture.ps1  memory-capture.py  rag-freshness-start.py  rag-freshness.ps1  rag-freshness.py  sertor-rag-usage-check.ps1  sertor-rag-usage-check.py  version-check-start.ps1  version-check-start.py  version-check.ps1  version-check.py  wiki-guard.py  wiki-pending-check.ps1  wiki-pending-check.py  wiki-session-start.ps1
.github/workflows/: ci.yml
.sertor/: pyproject.toml  sertor-cli-reference.md
.specify/: feature.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
01-baseline/: chunking.py
02-hybrid-reranking/: eval_queries.json  hybrid.py
03-graphrag/: build_graph.py  check_config.py  compare_runs.py
03-graphrag/grag/: settings.yaml
04-agentic-rag/: ESEMPI-agentic.md  README.md  autogen_app.py  eval_results.json  eval_tasks.json  evaluate.py  mcp_server.py  orchestrator.py  tools.py
docs/: README.md  getting-started.md  install-claude.md  install-copilot.md  install.md  reference.md  retrieval.md  troubleshooting.md  tutorial.md  why-sertor.md
eval/: baseline.toml  graph_baseline.toml  suite.toml
presentation/: build_excalidraw.py  build_pptx.py  prompt-slide.md  sertor-architettura-roadmap.excalidraw  sertor-overview.pptx
prototype/: .env.example  README.md
prototype/01-baseline/: README.md  chunking.py  eval_queries.json  evaluate.py  index.py  search.py
prototype/02-hybrid-reranking/: README.md  evaluate.py  hybrid.py  rerank.py
prototype/03-graphrag/: README.md  build_graph.py  evaluate.py  graph_query.py  summarize.py
prototype/04-agentic-rag/: ESEMPI-agentic.md  FUSIONE.md  agent.py  autogen_app.py  compare_fusion.py  eval_results.json  eval_tasks.json  evaluate.py  fusion_results.json  langgraph_app.py  mcp_server.py  sk_app.py
prototype/shared/: __init__.py  check_embeddings.py  chunking_code.py  config.py  derive_entity_types.py  embeddings.py  llm.py  loaders.py
prototype/tests/: conftest.py  test_agentic.py  test_chunking_code.py
raw/: README.md
requirements/backend-store-scala/: epic.md
requirements/conoscenza-schema-sql/: epic.md
requirements/debito-tecnico/: epic.md
requirements/documentazione-marketing/: epic.md
requirements/fedelta-dogfood/: epic.md
requirements/ingestione-estesa/: epic.md
requirements/memoria-conversazioni/: epic.md
requirements/multiutente/: epic.md
requirements/osservabilita/: epic.md
requirements/retrieval-qualita/: epic.md
requirements/second-brain/: epic.md
requirements/sertor-cli/: epic.md
requirements/sertor-core/: epic.md
requirements/speclift/: epic.md
requirements/usabilita/: epic.md
scripts/: smoke.ps1  smoke.sh
scripts/dev/: materialize-speckit.ps1  relock-runtime.ps1
shared/: config.py  derive_entity_types.py  loaders.py  retrieval.py
specs/001-nucleo-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-wiki-creazione/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cli-esecuzione/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-llm-wiki/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-wiki-manutenzione/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-nucleo-wiki-deterministico/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-wiki-lint-semantico/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-mcp-sertor-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-meccanica-log/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/009-store-backend-disaccoppiato/: plan.md  spec.md  tasks.md
specs/010-query-congiunta-e-upsert-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-cli-esecuzione-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-sertor-install-wiki/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-motore-ibrido-reranking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-motore-grafo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-sertor-install-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-igiene-radice-host/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-manutenzione-wiki/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-hardening-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-hardening-cache-token/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-osservabilita-persistente/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-osservabilita-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-osservabilita-tui-live/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-osservabilita-tui-report/: data-model.md  plan.md  quickstart.md  (+3 more)
tests/: conftest.py  test_agentic.py  test_baseline.py  test_graph_ast.py  test_graphrag_artifacts.py  test_graphrag_query.py  test_hybrid.py
wiki/: index.md  log.md  wiki.config.toml
(+1116 files in other folders)
