[project]
name = "sertor-core"
version = "0.1.0"
description = "Nucleo di retrieval condiviso per Sertor: ingestione repo-agnostica, chunking code-aware, embeddings e vector store intercambiabili, facade di retrieval riusabile come libreria."
readme = "src/sertor_core/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sertor" }]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    "pyyaml>=6.0",
]

[project.scripts]
sertor = "sertor_cli.cli:main"

[project.optional-dependencies]
# Backend cloud: dipendenze pesanti isolate (NFR-04). Importate lazy dagli adapter.
azure = [
    "azure-search-documents>=11.5",
    "azure-core>=1.30",
]
# Server MCP: espone il retrieval del core a un client MCP (es. Claude Code).
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sertor_core", "src/sertor_cli", "src/sertor_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"
markers = [
    "cloud: test che richiedono credenziali/servizi cloud (esclusi dalla CI locale)",
    "integration: test di integrazione end-to-end",
]
