[project]
name = "sertor-core"
version = "0.1.0"
description = "Nucleo di retrieval condiviso per Sertor: ingestione repo-agnostica, chunking code-aware, embeddings e vector store intercambiabili, facade di retrieval riusabile come libreria."
readme = "src/sertor_core/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sertor" }]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    # Indice lessicale del motore ibrido (FEAT-004): puro Python, numpy già transitiva da chromadb.
    "rank-bm25>=0.2",
]

[project.scripts]
sertor-wiki-tools = "sertor_core.wiki_tools.__main__:main"
sertor-rag = "sertor_core.cli.__main__:main"

[project.optional-dependencies]
# Backend cloud: dipendenze pesanti isolate (NFR-04). Importate lazy dagli adapter.
azure = [
    "azure-search-documents>=11.5",
    "azure-core>=1.30",
]
# Server MCP: espone il retrieval del core a un client MCP (es. Claude Code). Dipendenza isolata
# (REQ-060): la libreria core resta installabile senza l'SDK MCP.
mcp = [
    "mcp>=1.2",
]
# Reranker cross-encoder del motore ibrido (FEAT-004, REQ-021): extra isolato, import lazy nel
# composition root — il pacchetto base funziona senza (RRF-only).
rerank = [
    "flashrank>=0.2",
]
# Navigazione del code-graph (FEAT-005): networkx serve SOLO alle query (import lazy
# nell'adapter); il BUILD del grafo è JSON puro e funziona senza questo extra (research G1).
graph = [
    "networkx>=3",
]
# Pannello TUI di osservabilità (feature 022): Textual è importato lazy nel guscio di rendering
# (`observability/tui.py`); il core resta installabile senza (il modello di stato è puro stdlib).
tui = [
    "textual>=8,<9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "textual>=8,<9",   # per i test headless del pannello (Pilot)
]

[tool.uv.workspace]
# Monorepo a due pacchetti (FEAT-012, D1): la root è `sertor-core`, il membro
# `packages/sertor` è il pacchetto installer `sertor` (consumatore di `sertor-core`).
members = ["packages/sertor"]

[tool.uv.sources]
# In sviluppo, `sertor-core` (dipendenza di `packages/sertor`) si risolve dal workspace,
# non da PyPI/git: l'editable del membro punta al sorgente di questa root.
sertor-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sertor_core", "src/sertor_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "packages/sertor/src", "packages/sertor/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["sertor_core", "sertor_mcp", "sertor_installer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", ".", "packages/sertor/src"]
addopts = "-ra"
markers = [
    "cloud: test che richiedono credenziali/servizi cloud (esclusi dalla CI locale)",
    "integration: test di integrazione end-to-end",
]
