[project]
name = "sertor-core"
dynamic = ["version"]
description = "Nucleo di retrieval condiviso per Sertor: ingestione repo-agnostica, chunking code-aware, embeddings e vector store intercambiabili, facade di retrieval riusabile come libreria."
readme = "src/sertor_core/README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sertor" }]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    # Indice lessicale del motore ibrido (FEAT-004): puro Python, numpy già transitiva da chromadb.
    "rank-bm25>=0.2",
]

[project.scripts]
sertor-wiki-tools = "sertor_core.wiki_tools.__main__:main"
sertor-rag = "sertor_core.cli.__main__:main"

[project.optional-dependencies]
# Backend cloud: dipendenze pesanti isolate (NFR-04). Importate lazy dagli adapter.
azure = [
    "azure-search-documents>=11.5",
    "azure-core>=1.30",
]
# Server MCP: espone il retrieval del core a un client MCP (es. Claude Code). Dipendenza isolata
# (REQ-060): la libreria core resta installabile senza l'SDK MCP.
mcp = [
    "mcp>=1.2",
]
# Reranker cross-encoder del motore ibrido (FEAT-004, REQ-021): extra isolato, import lazy nel
# composition root — il pacchetto base funziona senza (RRF-only).
rerank = [
    "flashrank>=0.2",
]
# Navigazione del code-graph (FEAT-005): networkx serve SOLO alle query (import lazy
# nell'adapter); il BUILD del grafo è JSON puro e funziona senza questo extra (research G1).
graph = [
    "networkx>=3",
]
# Pannello TUI di osservabilità (feature 022): Textual è importato lazy nel guscio di rendering
# (`observability/tui.py`); il core resta installabile senza (il modello di stato è puro stdlib).
tui = [
    "textual>=8,<9",
]
# Conteggio token preciso per il tetto del chunk (max_chunk_tokens): tiktoken (cl100k_base, il
# tokenizer di text-embedding-3) è importato lazy in chunking. Senza questo extra il core ripiega su
# una stima conservativa-sicura per carattere (resta installabile e offline-safe).
tokenizer = [
    "tiktoken>=0.7",
]
# Export OpenTelemetry (feature 061, FEAT-005): SDK + OTLP exporter importati lazy in
# `observability/otel.py`. Il core resta installabile senza (export opt-in, default off): assente +
# export richiesto → ConfigError azionabile (come `[tui]`). Endpoint/trasporto via env OTEL standard.
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# Ambiente di sviluppo = UNICO venv coerente (E10-FEAT-002, unificazione venv): superset che fa
# girare test + lint + il server MCP del dogfood + il code-graph, così `uv sync --extra dev` da solo
# produce un ambiente completo e non esiste più un secondo venv che diverge in silenzio. `azure`
# resta opt-in (extra separato, pesante): per il dogfood-su-Azure si aggiunge `--extra azure`.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "textual>=8,<9",   # per i test headless del pannello (Pilot)
    "tiktoken>=0.7",   # conteggio token preciso del tetto chunk (dogfood/test)
    "mcp>=1.2",        # server MCP del dogfood (era solo nel venv .venv-core costruito a mano)
    "networkx>=3",     # navigazione code-graph (find_symbol/who_calls) servita dal server MCP
    "opentelemetry-sdk>=1.20",                    # export OTel (feature 061) + InMemory exporter nei test
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[tool.uv.workspace]
# Monorepo uv (FEAT-012/037, D1): la root è `sertor-core`; i membri sono `packages/sertor`
# (installer wiki/rag, consumatore di sertor-core), `packages/sertor-install-kit` (motore di
# installazione condiviso, stdlib-only) e `packages/sertor-flow` (installer governance/SDLC).
members = ["packages/sertor", "packages/sertor-install-kit", "packages/sertor-flow"]

[tool.uv.sources]
# In sviluppo, `sertor-core` (dipendenza di `packages/sertor`) si risolve dal workspace,
# non da PyPI/git: l'editable del membro punta al sorgente di questa root.
sertor-core = { workspace = true }
# `sertor-install-kit` (dipendenza di `packages/sertor` e `packages/sertor-flow`) si risolve
# dal workspace in sviluppo.
sertor-install-kit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Versione = unica fonte di verità nel file `/VERSION` di radice (FEAT-001 packaging, NFR-4).
# `dynamic = ["version"]` in [project] la rende dinamica; hatchling la legge da qui.
[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+?)\\s*$"

[tool.hatch.build.targets.wheel]
packages = ["src/sertor_core", "src/sertor_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "src", "tests",
    "packages/sertor/src", "packages/sertor/tests",
    "packages/sertor-install-kit/src", "packages/sertor-install-kit/tests",
    "packages/sertor-flow/src", "packages/sertor-flow/tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = [
    "sertor_core", "sertor_mcp", "sertor_installer", "sertor_install_kit", "sertor_flow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", ".", "packages/sertor/src"]
addopts = "-ra"
markers = [
    "cloud: test che richiedono credenziali/servizi cloud (esclusi dalla CI locale)",
    "integration: test di integrazione end-to-end",
]
